log
Thu May  5 15:06:21 UTC 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:20: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->capac = 0;
   ~~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
805b6d5
Thu May  5 15:06:53 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->size = 0;
   ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
e4b947e
Thu May  5 15:06:55 UTC 2022: 
In file included from test.c:4:0:
test.c: In function ‘createHeap’:
heap.c:37:19: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   nuevoHeap->size = 0;
   ~~~~~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
244e4ba
Thu May  5 15:07:26 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
5948f06
Thu May  5 15:07:38 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
ec806b5
Thu May  5 15:07:45 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
cc075a3
Thu May  5 15:07:52 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
e43049a
Thu May  5 15:08:46 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
fd936d5
Thu May  5 15:09:17 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
9f8087f
Thu May  5 15:09:49 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:48: error: ‘NULl’ undeclared (first use in this function); did you mean ‘NULL’?
     if (pq->heapArray[0].data == NULL || pq == NULl)return NULL;
                                                ^~~~
                                                NULL
heap.c:21:48: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7f0b595
Thu May  5 15:09:59 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ff666cd
Thu May  5 15:10:36 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
     printf("data: %d\n",(int)pq->heapArray[0].data);
                         ^
cc1: all warnings being treated as errors
Compilation failed
176e950
Thu May  5 15:10:44 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:20: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
     printf("data: %d\n",(int*)pq->heapArray[0].data);
                   ~^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                   %ls
cc1: all warnings being treated as errors
Compilation failed
8721d69
Thu May  5 15:10:52 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
f2929c0
Thu May  5 15:12:31 UTC 2022: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:68: error: comparison between pointer and integer [-Werror]
     if (pq->heapArray[0].data == NULL && pq->heapArray[0].priority == NULL)return NULL;
                                                                    ^~
cc1: all warnings being treated as errors
Compilation failed
276c5f9
Thu May  5 15:13:16 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c50d2dd
Thu May  5 15:15:04 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
a1087f9
Thu May  5 15:29:22 UTC 2022: 
 heap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
fdc8f32
Thu May  5 15:29:45 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|2
total_score: 30/70
d3418c4
Thu May  5 15:30:37 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:47:9: error: ‘else’ without a previous ‘if’
         else{break;}
         ^~~~
Compilation failed
607b8bc
